Sandbox/07-02-2025/force-app/main/default/objects/Adjustment__c/fields/Branded_Adjustment_Total__c.field-meta.xml
<CustomField>
    <fullName>Branded_Adjustment_Total__c</fullName>
    <label>Branded Adjustment Total</label>
    <summarizedField>Adjustment_Transaction__c.Branded_Adjustment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Adjustment_Transaction__c.Segment_Category__c</field>
        <operation>equals</operation>
        <value>Branded</value>
    </summaryFilterItems>
    <summaryForeignKey>Adjustment_Transaction__c.Adjustment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>