Sandbox/07-02-2025/force-app/main/default/objects/Adjustment__c/fields/Total_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Revenue__c</fullName>
    <formula>Monthly_Rev__c - Monthly_Rev_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Revenue</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>