Sandbox/07-02-2025/force-app/main/default/objects/Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>